--- a/src/e125v1/Makefile
+++ b/src/e125v1/Makefile
@@ -1,7 +1,5 @@
-CC=tcc
-PREFIX=
 BIN=e125v1_test
 
 default: test.c e125v1.h
 	cp e125v1.h $(PREFIX)
-	$(CC) test.c -o $(PREFIX)/$(BIN)
+	$(CC) test.c $(CFLAGS) -o $(PREFIX)/$(BIN)
